# aws-api-template

./: .cookiecutterignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: project_root.py  pyproject.toml
{{cookiecutter.repo_name}}/api/: handler.py
{{cookiecutter.repo_name}}/api/routes/: __init__.py  ping.py
{{cookiecutter.repo_name}}/cdk_project/: .gitignore  app.py
{{cookiecutter.repo_name}}/cdk_project/cdk_project/: cdk_project_stack.py  config.py
{{cookiecutter.repo_name}}/cdk_project/cdk_project/layers/: generate_api.py  generate_dependencies.py
{{cookiecutter.repo_name}}/scripts/: api.py  cdk.py
